fix: fix pagination alignment after tertiary button changes

--- a/packages/dnb-eufemia/src/components/pagination/style/_pagination.scss
+++ b/packages/dnb-eufemia/src/components/pagination/style/_pagination.scss
@@ -98,7 +98,6 @@
 
   &__bar__skip {
     margin-top: 0.5rem;
-    margin-left: -0.5rem;
   }
   &__bar__skip .dnb-button:first-of-type {
     margin-right: 1.5rem;
